scss files deleted, first components and home page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Photo Portfolio</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-light"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
