--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Photo Portfolio</title>
   </head>
   <body>
-    <div id="root" class="bg-light"></div>
+    <div id="root" class="bg-primary"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/assets/dist/js/all.js"></script>
   </body>
 </html>
