--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <div id="root" class="bg-primary"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script type="module" src="/src/assets/dist/js/all.js"></script>
+    <script type="module" src="/src/assets/js/images.js"></script>
   </body>
 </html>
