--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <div id="root" class="bg-primary"></div>
+  <div id="root" class="bg-light"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script type="module" src="/src/assets/dist/js/images.js"></script>
+  <script type="module" src="/src/assets/js/images.js"></script>
 </body>
 
 </html>
