--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="src/assets/sass/style.scss">
 
   <title>Photo Portfolio</title>
+
+  <style>
+    html,
+    body {
+      cursor: none !important;
+    }
+  </style>
 </head>
 
 <body>
