--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="src/assets/sass/style.scss">
+  <link rel="icon" href="/favicon-32x32.png" type="image/png" />
 
   <title>Photo Portfolio</title>
 
