--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <div id="root" class="background--light"></div>
+  <div id="root" class="background--light theme__animation"></div>
   <script type="module" src="/src/main.jsx"></script>
   <script type="module" src="/src/assets/js/images.js"></script>
 </body>
