contexto isMobile, portfolio mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div id="root" class="background--light theme__animation"></div>
+  <div id="root" class="background--light theme__animation overflow--clip"></div>
   <script type="module" src="/src/main.jsx"></script>
   <script type="module" src="/src/assets/js/images.js"></script>
 </body>
