feat: add cursoir on hover <a>

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <title>Photo Portfolio</title>
 
   <style>
-    body,html {
-      cursor: none;
+    body,
+    html,
+    a,
+    * {
+      cursor: none !important;
     }
   </style>
 </head>
