style changes, and added images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 
   <title>Photo Portfolio</title>
 
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="SYP Creative - Photo Portfolio" />
+    <meta property="og:description" content="Explore my creative photo portfolio showcasing captivating visuals and impactful designs." />
+    <meta property="og:image" content="https://sypcreative.com/images/link-cover.webp" />
+    <meta property="og:url" content="https://sypcreative.com" />
+    <meta property="og:type" content="website" />
+  
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SYP Creative - Photo Portfolio" />
+    <meta name="twitter:description" content="Explore my creative photo portfolio showcasing captivating visuals and impactful designs." />
+    <meta name="twitter:image" content="https://sypcreative.com/images/link-cover.webp" />
+  
   <style>
     body,
     html,
